<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="txtBtnReset">Reset</string>
    <string name="txtBtnCalculate">Calculate BMI</string>
    <string name="main_bmi">BMI: %.2f %s</string>
    <string name="main_invalid_weight">This field can not be blank or 0</string>
    <string name="main_invalid_height">This field can not be blank or 0</string>
    <string name="main_normal">Normal</string>
    <string name="main_overweight">Overweight</string>
    <string name="main_obesity1">Obesity Class 1</string>
    <string name="main_obesity2">Obesity Class 2</string>
    <string name="main_obesity3">Obesity Class 3</string>
    <string name="main_underweight">Underweight</string>
    <!-- TODO -->
</resources>
